--- a/Datos/Datos.csproj
+++ b/Datos/Datos.csproj
@@ -53,6 +53,7 @@
   <ItemGroup>
     <Compile Include="DataBase.cs" />
     <Compile Include="Jugador.cs" />
+    <Compile Include="Jugar.cs" />
     <Compile Include="Partido.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Rol.cs" />
