--- a/Presentacion/Presentacion.csproj
+++ b/Presentacion/Presentacion.csproj
@@ -12,6 +12,7 @@
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
+    <IsWebBootstrapper>false</IsWebBootstrapper>
     <PublishUrl>publish\</PublishUrl>
     <Install>true</Install>
     <InstallFrom>Disk</InstallFrom>
@@ -24,7 +25,6 @@
     <MapFileExtensions>true</MapFileExtensions>
     <ApplicationRevision>0</ApplicationRevision>
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
-    <IsWebBootstrapper>false</IsWebBootstrapper>
     <UseApplicationTrust>false</UseApplicationTrust>
     <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
@@ -101,11 +101,23 @@
     <Compile Include="formInsertarUsuario.Designer.cs">
       <DependentUpon>formInsertarUsuario.cs</DependentUpon>
     </Compile>
+    <Compile Include="formModificarPartido.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="formModificarPartido.Designer.cs">
+      <DependentUpon>formModificarPartido.cs</DependentUpon>
+    </Compile>
     <Compile Include="formModificarUsuario.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="formModificarUsuario.Designer.cs">
       <DependentUpon>formModificarUsuario.cs</DependentUpon>
+    </Compile>
+    <Compile Include="formPartidos.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="formPartidos.Designer.cs">
+      <DependentUpon>formPartidos.cs</DependentUpon>
     </Compile>
     <Compile Include="formPrincipal.cs">
       <SubType>Form</SubType>
@@ -139,8 +151,14 @@
     <EmbeddedResource Include="formLogin.resx">
       <DependentUpon>formLogin.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="formModificarPartido.resx">
+      <DependentUpon>formModificarPartido.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="formModificarUsuario.resx">
       <DependentUpon>formModificarUsuario.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="formPartidos.resx">
+      <DependentUpon>formPartidos.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormPrincipal.resx">
       <DependentUpon>formPrincipal.cs</DependentUpon>
@@ -198,6 +216,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\user-default.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\CampoMedidor.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
